Estrutura com js, feita pelo professor terminada

--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./main.js" defer></script>
     <title>Produtos</title>
 </head>
 <body class="bg-gray-200 flex flex-col items-center justify-center h-screen gap-4">
     <h1 class="text-2xl">Listas Produtos</h1>
-    <input type="text" class="border px-4 py-2 rounded">
-    <button class="bg-blue-500 text-white px-4 py-2 rounded">Adicionar</button>
-    <div>
-
+    <input 
+        type="text" 
+        class="border-2 border-black px-4 py-2 rounded"
+        id="produto"
+    >
+    <button 
+        class="bg-blue-500 text-white px-4 py-2 rounded"
+        onclick="adicionarProduto()"
+    >
+        Adicionar
+    </button>
+    <div 
+        id="lista"
+        class="flex flex-col gap-2">
+        
     </div>
 </body>
 </html>
