--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     >
     <button 
         class="bg-blue-500 text-white px-4 py-2 rounded"
-        onclick="adicionarProduto()"
+        onclick="adicionarProduto(), limparInput()"
     >
         Adicionar
     </button>
